29/06/2005 0.0.30
- removed luafull
- moved xml2tex to modules/ and now is executed with -e (no more luafull)
- mail2world.lua is now official
- fixed libero multipage stat
- aol.lua, mailcom.lua: changed homepage to http://www.freepops.org (alessiofender)
- es: *** empty log message *** (lisar314)
- fr: *** empty log message *** (fvancaen)
- aol.lua: fixed aol change to aol.com domain (russell822)
- mailcom.lua: A small tweak to fix minor received: header line issues with tabs being replaced by nothing when they should be replaced by a space. (russell822)
- gmail.lua: language fixes (ncocchiaro)
- es, fr: fix (gareuselesinge)
- gmail.lua: Updated the URL's to reflect gmail's changes and changed the require version so that ssl errors don't appear from a bad curl dependency. (russell822)
- gmail.lua: Fixed few conversation bugs, and added the getnew feature. (rkattan)
- gmail.lua: Fixed few bugs due to changes in gmail web pages (rkattan)
- mailcom.lua: fixed some minor issues with lycos.com (russell822)
- added support for jubii.dk to the davmail plugin
- new .spec file for mandriva
- added much docs in freepops.lua
- added a snapshot of updater.lua
- moved -x to the new -e stuff (code cleanup in engine.c and freepops.c)
- added some patches for BEOS (thanks Michle)
- added -e to interpret a lua script
- in Windows, try to automatically change the working directory if the 
command line provides some kind of path
- fixed some stuff for debian
- moved to a complede vanilla debian box for windoz crosscompilation (the old
and good SDL crosscompiler is not used anymore. RIP)
05/06/2005 0.0.29
- es: *** empty log message *** (lisar314)
- mailcom.lua: fixed issues with operamail and ambigious match (russell822)
- fr: *** empty log message *** (fvancaen)
- aol.lua: Made a minor tweak for aim. (russell822)
- fr: convenience zip chapter (fvancaen)
- fr: freepops is now part of debian (fvancaen)
- es: fixed rss (gareuselesinge)
- es, fr: removed statistics (gareuselesinge)