@@ -1,7 +1,8 @@
 /******************************************************************************
  * $Id$
  * This file is part of FreePOPs (http://www.freepops.org)                    *
- * This file is distributed under the terms of GNU GPL license.               *
+ * This file is distributed under the terms of GNU GPL license or, at your    *
+ * option,  MIT license .                                                     *
  ******************************************************************************/
 
 /******************************************************************************
